Make the top navigation into an actual menu and make sure that the active page is visible.

--- a/Documentation/Website/styles/app.scss
+++ b/Documentation/Website/styles/app.scss
@@ -29,3 +29,9 @@ a {
     }
   }
 }
+
+.dropdown.menu > li.active.is-dropdown-submenu-parent > a::after {
+  border-color: #fefefe transparent transparent
+}
+
+
